# levante-slurm-utils

./: README.md  pyproject.toml
src/levante_slurm_utils/: __init__.py  cli.py  compute.py
src/levante_slurm_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_compute.py
